# learn_rust_jetbrains

./: Cargo.toml  README.md
Common Collections/Vectors/Count Typed Cells/: task-info.yaml
Common Collections/Vectors/Create a Vector on Your Own/: task-info.yaml
Common Collections/Vectors/Loop Over a Vector/: task-info.yaml
Common Programming Concepts/Basic Data Types/Boolean Test/: task-info.yaml
Common Programming Concepts/Basic Data Types/Characters Test/: task-info.yaml
Common Programming Concepts/Basic Data Types/Numeric Test/: task-info.yaml
Common Programming Concepts/Basic Data Types/Use Clippy as External Linter/: task-info.yaml
Common Programming Concepts/Conditions/Add Conditions/: task-info.yaml
Common Programming Concepts/Conditions/If Task/: task-info.yaml
Common Programming Concepts/Conditions/Managing Conditions/: task-info.yaml
Common Programming Concepts/Functions/Defining a Function/: task-info.yaml
Common Programming Concepts/Functions/Extract Method Refactoring/: task-info.yaml
Common Programming Concepts/Functions/Passing an Argument/: task-info.yaml
Common Programming Concepts/Functions/Return Type/: task-info.yaml
Common Programming Concepts/Functions/Return a Value/: task-info.yaml
Common Programming Concepts/Functions/Type Annotation of a Parameter/: task-info.yaml
Common Programming Concepts/Repetitions/Find a sum/: task-info.yaml
Common Programming Concepts/Repetitions/Print Months/: task-info.yaml
Common Programming Concepts/Tuples and Arrays/Create an Array/: task-info.yaml
Questions/: Questions.md
(+58 files in other folders)
