[workspace]

members = [
    "Introduction/Getting started/*/",
    "Common Programming Concepts/Variables/*/",
    "Common Programming Concepts/Basic Data Types/*/",
    "Common Programming Concepts/Functions/*/",
    "Common Programming Concepts/Variables, Functions, and Conditions Test/*/",
    "Common Programming Concepts/Conditions/*/",
    "Common Programming Concepts/Repetitions/*/",
    "Common Programming Concepts/Tuples and Arrays/*/",
    "Understanding Ownership/What is ownership/*/",
    "Understanding Ownership/References and Borrowing/*/",
    "Understanding Ownership/The Slice Type/*/",
    "Structs, Methods, Enums, and Pattern Matching/Structs/*/",
    "Structs, Methods, Enums, and Pattern Matching/Structs with Methods/*/",
    "Structs, Methods, Enums, and Pattern Matching/Enums/*/",
    "Structs, Methods, Enums, and Pattern Matching/Pattern Matching/*/",
]

exclude = [
    "**/*.yaml"
]

resolver = "2"
